--- a/appsrc/style/pages/hub/_browser-meat.scss
+++ b/appsrc/style/pages/hub/_browser-meat.scss
@@ -9,7 +9,7 @@ $meat-cover-scale: 0.4;
   .browser-bar {
     display: flex;
     align-items: center;
-    padding: $grid-padding $grid-padding * 2;
+    padding: 5px 20px;
     background: $sidebar-background-color;
     border: 1px solid #353535;
     border-left: none;
