--- a/appsrc/style/pages/hub/_game-meat.scss
+++ b/appsrc/style/pages/hub/_game-meat.scss
@@ -22,7 +22,7 @@ $meat-cover-scale: 0.4;
     display: flex;
     font-size: 15px;
     color: $secondary-text-color;
-    padding: 10px 0;
+    padding: 4px 0 10px 0;
 
     div {
       margin-right: 12px;
